@@ -1,3 +1,13 @@
+2018-03-01  Jason Merrill  <jason@redhat.com>
+	    Alexandre Oliva <aoliva@redhat.com>
+
+	PR c++/71569 - ICE with redundant args on member variable template.
+	* decl.c (start_decl): Handle partial specialization of member
+	variable template.
+	* pt.c (determine_specialization): Allow partial specialization
+	of member variable template without specializing enclosing class.
+	(process_partial_specialization): Improve error message.
+
 2018-02-28  Jason Merrill  <jason@redhat.com>
 
 	PR c++/71784 - ICE with ref-qualifier and explicit specialization.
